fixed body overflow issue

--- a/analysis.css
+++ b/analysis.css
@@ -84,11 +84,12 @@ body{
     background-image: url(./images/black-elegant-background-with-copy-space.jpg);
     background-repeat: repeat;
     background-size: cover;
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     margin-left: 70px;
     width: 100%;
     height: 100%;
+    overflow: hidden;
     /* align-items: flex-start; */
 }
 
